--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-*       @styfle
+* @creativecommons/frontend @creativecommons/ct-cc-search-core-committers @creativecommons/ct-cc-search-collaborators
